# alfabank-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/superpowers/plans/: 2026-07-12-alfabank-sdk.md
docs/superpowers/specs/: 2026-07-12-alfabank-sdk-design.md
examples/: basic_usage.py  fastapi_integration.py
src/alfabank/: __init__.py  _transport.py  _utils.py  auth.py  client.py  enums.py  exceptions.py  oauth.py
src/alfabank/models/: __init__.py  common.py  customer.py  statement.py
src/alfabank/resources/: __init__.py  _base.py  customer.py  statements.py
tests/: conftest.py  test_auth.py  test_client.py  test_customer_resource.py  test_enums.py  test_exceptions.py  test_models_common.py  test_models_customer.py  test_models_statement.py  test_oauth.py  test_package.py  test_public_api.py  test_retry_policy.py  test_statements_resource.py  test_transport.py  test_utils.py
